# Time-Synchronize-Kinect-RGBD-Streams

./: .gitignore  CMakeLists.txt  README.md  package.xml
include/: registration.hpp
launch/: gazebo_world.launch  npz2pointcloud.launch  start_collection.launch  start_gazebo.launch
src/: combination.cpp  combination.hpp  registration.cpp  registration.hpp  spPCL.cpp  time_sync_kinects.cpp
src/data_collection/: README.md  data_collector.py  data_converter.py  tf_broadcaster.py
src/gazebo_utils/: model_mover.py
src/pointcloud_publisher/: publish_npz.py
src/registration/: registration.cpp
worlds/: cube_test.world  test.world  test_world  test_world.sdf  wall_test.world
